circuit breaker implementation

--- a/accounts/src/main/resources/application.properties
+++ b/accounts/src/main/resources/application.properties
@@ -7,25 +7,44 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8080
-
 spring.application.name=accounts
 spring.profiles.active=default
 spring.config.import=optional:configserver:http://localhost:8071
-
 management.endpoints.web.exposure.include=*
-
 #Eureka client configuration
-eureka.instance.preferAddress= true
-eureka.client.registerWithEureka = true
-eureka.client.fetchRegistry = true
+eureka.instance.preferAddress=true
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
 eureka.client.serviceUrl.defaultZone=http://localhost:8070/eureka
-
 #Configuring endpoint
 info.app.name=Accounts Microservice
 info.app.description=Bank Account Application
 info.app.version=1.0.0
-management.info.env.enabled = true
-
+management.info.env.enabled=true
 endpoint.shutdown.enabled=true
-management.endpoint.shutdown.enabled = true
+management.endpoint.shutdown.enabled=true
+resilience4j.circuitbreaker.configs.default.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.detailsForCustomerSupportApp.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.detailsForCustomerSupportApp.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.detailsForCustomerSupportApp.waitDurationInOpenState=30000
+resilience4j.circuitbreaker.instances.detailsForCustomerSupportApp.permittedNumberOfCallsInHalfOpenState=2
+
+#Retry pattern properties
+resilience4j.retry.configs.default.registerHealthIndicator=true
+resilience4j.retry.instances.retryCustomerDetails.maxRetryAttempts=3
+resilience4j.retry.instances.retryCustomerDetails.waitDuration=2000
+
+# Rate Limitter
+resilience4j.ratelimiter.configs.default.registerHealthIndicator=true
+resilience4j.ratelimiter.instances.sayHello.timeOutDuration=5000
+resilience4j.ratelimiter.instances.sayHello.limitRefreshPeriod=5000
+resilience4j.ratelimiter.instances.sayHello.limitForPeriod=1
+
+
+
+
+
+
+
+
 
